--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="card3d-bg"></div>
             <div class="card3d-content">
               <div class="stamp">
-                <div class="stamp-top">DOS</div>
+                <div class="stamp-top">DOSE</div>
                 <div class="stamp-mid">DO</div>
                 <div class="stamp-bot">WEDDING</div>
               </div>
@@ -112,7 +112,7 @@
 
               <div class="card3d-text">
                 <div class="small">Astra(Azure_st) × Neuri(itsNeuri_)</div>
-                <div class="big">Dos Wedding</div>
+                <div class="big">Dose Wedding</div>
                 <div class="tiny">Scroll to reveal ✦</div>
               </div>
             </div>
