--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <span class="badge">DO</span>
       <div class="brand-text">
         <div class="brand-title">도결 Invitation</div>
-        <div class="brand-sub">Astra × Neuri — Dos Wedding</div>
+        <div class="brand-sub">Astra × Neuri — Dose Wedding</div>
       </div>
     </div>
 
@@ -508,3 +508,4 @@
   <script src="./app.js"></script>
 </body>
 </html>
+
