--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
     <footer class="footer">
       <div class="footer-inner glass" data-reveal>
         <div class="footer-title">Astra(Azure_st) × Neuri(itsNeuri_)</div>
-        <div class="footer-sub">Made with Pink love, for Dos Wedding (도결)</div>
+        <div class="footer-sub">Made with Pink love, for Dose Wedding (도결)</div>
         <div class="footer-actions">
           <button class="btn ghost small" data-jump="#top"><span class="i">⇡</span> 맨 위로</button>
           <button class="btn primary small" id="toggleMusic"><span class="i">♪</span> 무드 사운드</button>
@@ -508,4 +508,5 @@
   <script src="./app.js"></script>
 </body>
 </html>
+
 
